Update Auction System to 21.07